[package]
name = "ping-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ping-common = { path = "../ping-common", features = ["actor"] }
kameo = { version = "0.19" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }