[package]
name = "ping-wasm-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ping-common = { path = "../ping-common" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "WebSocket", 
    "MessageEvent", 
    "ErrorEvent", 
    "CloseEvent"
] }
serde_json = "1"
console_error_panic_hook = "0.1"
js-sys = "0.3"